--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,7 +21,7 @@
     column-gap: 30px;
 }
 
-.left-contact a,
+.left-contact a, .left-contact
 p {
     text-decoration: none;
     color: white;
@@ -103,3 +103,53 @@ nav{
 
 
 
+/*first-section*/
+
+.first-section ,.carousel-inner{
+
+    
+    height: 60vh;
+   
+
+}
+
+.carousel-item img {
+    /* position: absolute; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+}
+
+.section-div-paragrapgh{
+    position: absolute;
+    inset: 141px 64px 64px 340px;
+    width: 50%;
+    flex-direction: column;
+    display: flex;
+
+    align-items: center;
+    gap: 30px;
+    
+}
+
+
+.section-div-paragrapgh span{
+    color: orangered;
+}
+
+.section-div-paragrapgh h1{
+    color: #545454;
+}
+
+.section-div-paragrapgh p{
+    color: #8d8c8d;
+}
+
+.button button{
+    padding: 10px;
+    padding-inline: 30px;
+    border-radius: 20px;
+    border: none;
+    background-color: #e96b56;
+}
