--- a/public/css/app.css
+++ b/public/css/app.css
@@ -105,10 +105,10 @@ nav{
 
 /*first-section*/
 
-.first-section ,.carousel-inner{
+.carousel-inner{
 
     
-    height: 60vh;
+    height: 70vh;
    
 
 }
