--- a/public/css/app.css
+++ b/public/css/app.css
@@ -179,4 +179,52 @@ display: flex;
 .bb i {color: red;
 
 }
+.section5{
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
+.section5 h4 { 
+   
+    
+  
+    border-bottom: 6px solid red; /* Épaisseur et couleur personnalisées */
+    display: inline-block; /* Nécessaire pour que la bordure s'adapte au texte */
+    padding-bottom: 2px;   /*Espace entre texte et trait */
+}
+
+/* session likthrek */
+.slider{
+    overflow: hidden;
+    background: #3c3c3c;
+    padding: 30px  0 ;
+
+}
+.slider.slide-track{
+    display: flex;
+    width: calc(200px*16);
+    animation: scroll 30s linear infinite;
+}
+.slider img {
+    width:150px ;
+    height:auto ;
+    margin: 0 30px ;
+    filter:  grayscale(100%);
+    opacity: 0.7;
+    transition: 0.3;
+
+}
+.slider img:hover{
+    opacity: 1;
+    filter: grayscale(0%);
+    transform: scale(1.05);
+
+}
+@keyframes scroll {
+    0%{transform: translate(0);}
+    100%{transform: translate(-50%);}gi
+}
+
 
