--- a/public/css/app.css
+++ b/public/css/app.css
@@ -180,7 +180,7 @@ display: flex;
 
 }
 .section5{
-    background-color: aqua;
+   
     display: flex;
     flex-direction: column;
    align-items: center;
@@ -196,35 +196,40 @@ display: flex;
 }
 
 /* session likthrek */
-.slider{
+
+.logo-slider{
+   
     overflow: hidden;
     background: #3c3c3c;
     padding: 30px  0 ;
 
 }
-.slider.slide-track{
+.slider-track{
     display: flex;
+   align-items: center;
+   gap: 60px;
     width: calc(200px*16);
     animation: scroll 30s linear infinite;
 }
-.slider img {
-    width:150px ;
-    height:auto ;
-    margin: 0 30px ;
+.slider-track img {
+    /* width:50px ; */
+    height: 45px; 
+    /* margin: 0 30px ; */
     filter:  grayscale(100%);
     opacity: 0.7;
-    transition: 0.3;
+    transition: 0.3  ease;
 
 }
-.slider img:hover{
+.slider-track img:hover{
     opacity: 1;
     filter: grayscale(0%);
     transform: scale(1.05);
 
 }
+/* animation */
 @keyframes scroll {
-    0%{transform: translate(0);}
-    100%{transform: translate(-50%);}gi
+    from{transform: translatex(0);}
+     to {transform: translateX(-50%);}
 }
 
 
