--- a/public/css/app.css
+++ b/public/css/app.css
@@ -188,30 +188,30 @@ display: flex;
 }
 .section5 h4 { 
    
-    
-  
-    border-bottom: 6px solid red; /* Épaisseur et couleur personnalisées */
-    display: inline-block; /* Nécessaire pour que la bordure s'adapte au texte */
-    padding-bottom: 2px;   /*Espace entre texte et trait */
+
+ 
+    border-bottom: 6px solid red; 
+    display: inline; 
+    padding-bottom: 10px;   
 }
 
 /* session likthrek */
 
-.logo-slider{
+.logos{
    
     overflow: hidden;
     background: #3c3c3c;
     padding: 30px  0 ;
 
 }
-.slider-track{
+.logodif{
     display: flex;
    align-items: center;
    gap: 60px;
     width: calc(200px*16);
     animation: scroll 30s linear infinite;
 }
-.slider-track img {
+.logodif img {
     /* width:50px ; */
     height: 45px; 
     /* margin: 0 30px ; */
@@ -220,7 +220,7 @@ display: flex;
     transition: 0.3  ease;
 
 }
-.slider-track img:hover{
+.logodif img:hover{
     opacity: 1;
     filter: grayscale(0%);
     transform: scale(1.05);
