--- a/public/css/app.css
+++ b/public/css/app.css
@@ -158,21 +158,21 @@ nav{
 
 /* session chaimae */
 .section3{ display: flex;
-
+padding-left : 40px ;
+padding-right:40px ;
+padding-bottom: 40px;
 }
-.rigthdiv{
-    get . 
+/* .rigthdiv{
+     
     width: 100vw;
     height: 100vh;
-}
+} */
 .rigthdiv h5{
     color: grey;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
-.rightdiv{
-    
-    width: 100vw;
-    height: 100vh;
-}
+
 .bb{
 display: flex;
 }
@@ -180,7 +180,7 @@ display: flex;
 
 }
 .section5{
-   
+   padding-top: 50px;
     display: flex;
     flex-direction: column;
    align-items: center;
@@ -192,7 +192,12 @@ display: flex;
  
     border-bottom: 6px solid red; 
     display: inline; 
-    padding-bottom: 10px;   
+    padding-bottom: 20px;   
+}
+.section5 p{
+   
+    padding-left: 70px;
+    padding-right: 70px;
 }
 
 /* session likthrek */
@@ -200,7 +205,7 @@ display: flex;
 .logos{
    
     overflow: hidden;
-    background: #3c3c3c;
+  
     padding: 30px  0 ;
 
 }
@@ -232,8 +237,15 @@ display: flex;
      to {transform: translateX(-50%);}
 }
 
-
+@media (max-width: 445px){
+    .section3{
+        display: flex;
+        flex-direction: column;
+    }
+    .rigthdiv{order:1;}
+    
 }
+
 
 .cards{
     display:flex;
