--- a/public/css/app.css
+++ b/public/css/app.css
@@ -691,3 +691,39 @@ display: flex;
         color: black;
     }
 }
+
+
+
+
+
+/*contact*/
+
+.first-section-contact{
+    margin-top: 120px;
+    height: 20vh;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    background-color: #f8f8f8;
+    
+    padding-inline: 130px;
+}
+
+.first-section-contact div a{
+    text-decoration: none;
+    color: orangered;
+}
+
+.first-section-contact div {
+    /* flex-direction: column; */
+    display: flex;
+    column-gap: 10px;
+}
+
+.first-section-contact div p{
+    color: black;
+}
+
+.first-section-contact div h3{
+    font-weight: 600;
+}
