--- a/public/css/app.css
+++ b/public/css/app.css
@@ -136,10 +136,11 @@ nav{
 }
 
 .carousel-item img {
-    width: 100%;
-    height: 100%;
+    /* position: relative; */
+    width: 100px;
+    height: 717px;
     object-fit: cover;
-    opacity: 0.5;
+    opacity: 0.2;
 }
 
 .section-div-paragrapgh{
@@ -151,6 +152,12 @@ nav{
     align-items: center;
     gap: 30px;
     
+}
+
+.carousel  button{
+    /* color: black; */
+    color: gray ;
+    /* background-color: #3c3c3c; */
 }
 
 
@@ -171,6 +178,7 @@ nav{
     padding-inline: 30px;
     border-radius: 20px;
     border: none;
+    color: white;
     background-color: #e96b56;
 }
 
@@ -450,7 +458,7 @@ footer{
 
      .section-div-paragrapgh{
     position: absolute;
-    inset: 100px 64px 64px 102px;
+    inset: 200px 64px 64px 106px;
 }
 
 /*footer*/
