main services_page by chorouk

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -208,9 +208,8 @@ footer{
     padding-inline: 20px;
 }
 
-.top-footer h3 , p{
+.top-footer h3 , .top-footer p{
     color: white;
-   
 }
 
 .top-footer .btn:hover{
@@ -595,7 +594,7 @@ display: flex;
     
 }
 
-
+/*session3 chorouk*/
 .cards{
     display:flex;
     justify-content: space-between;
@@ -639,7 +638,7 @@ display: flex;
         padding: unset;
     }
 }
-    
+    /*session5 chorouk*/
 .bg_svg{
     background-color: #e96b56;
     color: white;
@@ -679,9 +678,9 @@ display: flex;
     color: #e96b56;
 }
 
-.card-text{
-    color: black;
-}
+
+
+
 @media (max-width: 445px){
     .grid{
         display: unset;
@@ -903,12 +902,102 @@ textarea{
     }
 
     .inside-left-input input{
-             width: unset;
+            width: unset;
     }
 }
 
+/*services_page  css chorouk*/
 
+.margin{
+    margin-top: 120px;
+}
 
+.center{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 90px;
+}
+.center h1{
+    color: #3c3c3ce8;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+.center h1::after{
+    content: "";
+    width: 45px;
+    height: 4px;
+    background-color: #e96b56;
+    margin-top: 8px;
+}
+.center p{
+    color: #505050;
+    padding-bottom: 20px;
+}
 
+.flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 35px;
+    padding: 4vh 4vw;
+}
+.flex h2{
+    color: #3c3c3ce8;
+}
+.flex p{
+    color: #505050;
+}
+.photo{
+    width:45vw;
+    height: 52vh;
+}
 
+.items1 {
+    display: flex;
+    justify-content: space-between;
+}
+.progress-bar {
+    background-color: rgb(232, 107, 87) !important;
+    border-radius: 0px;
+}
+.progress {
+    height: 12px !important;
+    border-radius: 0 !important;
+    animation: fillBar 2s forwards;
+}
+@keyframes fillBar{
+    from { width: 0%; }
+    to { width: 100%; }
+}
+@media (max-width: 445px) {
 
+    .flex{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .photo{
+        width: 90vw;
+        height: 50vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .flex h2{
+    color: #3c3c3ce8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+    .center p{
+        padding: 2vh 2vw;
+    }
+    .media_marg{
+        margin-top: 120px;
+    }
+}
