--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1037,8 +1037,13 @@ footer{
     gap: 10px;
 }
 
+
+
+                                             /*change height of footer*/
+
+
 .before-buttom-footer{
-    height: 120vh;
+    height: 150vh;
 }
 
 
@@ -1130,7 +1135,7 @@ footer{
 
     
     .team-section{
-        height: 160vh;
+        height: 180vh;
         padding-inline: unset;
     }
 
