--- a/public/css/app.css
+++ b/public/css/app.css
@@ -714,49 +714,126 @@ textarea{
 
 
 
- 
+
 
 /*abouut chaimae css*/
 
 /*team-section-1*/
 
 .team-section{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:45px;
+    padding:5vh 8vw;
+}
+.section1-team{
+    border: 1px solid rgba(0, 0, 0, 0.06);
+    box-shadow: 2px 2px 2px 2px rgba(128, 128, 128, 0.188);
+    padding:2vh 2vw;
+    border-radius: 3px;
+    transition:transform 0.5s ease, box-shadow 0.5s ease;
+    transform:translateY(300px);
+    animation:slideUp 0.9s forwards;
+}
+.section2-team{
+    border: 1px solid rgba(0, 0, 0, 0.06);
+    box-shadow: 2px 2px 2px 2px rgba(128, 128, 128, 0.188);
+    padding:2vh 2vw;
+    border-radius: 3px;
+    transition:transform 0.5s ease, box-shadow 0.5s ease;
+    transform:translateY(300px);
+    animation:slideUp 0.9s forwards;
+}
+.section3-team{
+    border: 1px solid rgba(0, 0, 0, 0.06);
+    box-shadow: 2px 2px 2px 2px rgba(128, 128, 128, 0.188);
+    padding:2vh 2vw;
+    border-radius: 3px;
+    transition:transform 0.5s ease, box-shadow 0.5s ease;
+    transform:translateY(300px);
+    animation:slideUp 0.9s forwards;
+}
+.section4-team{
+    border: 1px solid rgba(0, 0, 0, 0.06);
+    box-shadow: 2px 2px 2px 2px rgba(128, 128, 128, 0.188);
+    padding:2vh 2vw;
+    border-radius: 3px;
+    transition:transform 0.5s ease, box-shadow 0.5s ease;
+    transform:translateY(300px);
+    animation:slideUp 0.9s forwards;
+}
+.section1-team{
+    animation-delay: 0.1s;
+}
+.section2-team{
+    animation-delay: 0.3s;
+}
+.section3-team{
+    animation-delay: 0.5s;
+}
+.section4-team{
+    animation-delay: 0.7s;
+}
+
+.section1-team:hover{
+    box-shadow: 6px 6px 6px 6px rgba(128, 128, 128, 0.441);
+    transform: translateY(-20px);
+}
+.section2-team:hover{
+    box-shadow: 6px 6px 6px 6px rgba(128, 128, 128, 0.441);
+    transform: translateY(-20px);
+}
+.section3-team:hover{
+    box-shadow: 6px 6px 6px 6px rgba(128, 128, 128, 0.441);
+    transform: translateY(-20px);
+}
+.section4-team:hover{
+    box-shadow: 6px 6px 6px 6px rgba(128, 128, 128, 0.441);
+    transform: translateY(-20px);
+}
+@keyframes slideUp{
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+
+.flex-inside{
+    display: flex;
     flex-direction: column;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    padding-inline: 100px;
-    row-gap: 10px;
 }
 
-.top-section-team  , .bottom-section-team{
+.flex-img-text{
     display: flex;
-    justify-content: space-around;
-    column-gap: 10px;
-    row-gap: 20px;
+    gap:8px
 }
 
-.left-section-team img , .right-section-team img,
-.left-bottom-team img , .right-bottom-team  img{
+.section1-team img{
     width: 130px;
     height: 130px;
     border-radius: 50%;
-
-    
+}
+.section2-team img{
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+}
+.section3-team img{
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+}
+.section4-team img{
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
 }
 
-.left-section-team , .right-section-team ,
-.left-bottom-team , .right-bottom-team {
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+.right-media{
     display: flex;
-    column-gap: 10px;
-    width: 50%;
-    padding: 30px;
-    height: 100%;
+    justify-content: unset;
 }
-
-
 
 .line-color{
     display: flex;
@@ -767,21 +844,13 @@ textarea{
 
 
 
-.left-section-team div .right-media , .right-section-team div  .right-media,
-.left-bottom-team div .right-media , .right-bottom-team div .right-media{
-    justify-content: unset;
-    /* background-color: #545454; */
-}
-
-
-
 
 
 .section1{margin-top: 200px;
-     display: flex;
-padding-left : 40px ;
-padding-right:40px ;
-padding-bottom: 40px;
+    display: flex;
+    padding-left : 40px ;
+    padding-right:40px ;
+    padding-bottom: 40px;
 }
 
 
@@ -792,22 +861,20 @@ padding-bottom: 40px;
 }
 .modif1{
     display: flex;
-   gap: 20px;
+    gap: 20px;
     
 }
 .modif1 i{
     display: flex;
     justify-content: center;
     color: red;
-   
-   
-    
+
 }
 .modif1 h6 {
     color: gray;
 }
 .modif1 span{
-   font-size: x-large;
+    font-size: x-large;
 }
 .section2{
     display: flex;
@@ -853,7 +920,7 @@ margin-top: 20px;
 .quote{
     padding-top: 15px;
 }
-/*madia de "about"*/
+/*media de "about"*/
 
 
 
@@ -931,11 +998,11 @@ margin-top: 20px;
 
 /* all media*/
 @media (max-width:445px){
-     .four-section ,.right-media{
+    .four-section ,.right-media{
         display: none;
     }
 
-     /*before-nav*/
+    /*before-nav*/
     .before-nav{
         flex-direction: column;
     }
@@ -978,7 +1045,7 @@ margin-top: 20px;
         position: relative;
         
     }
-     
+    
     .left-nav{
         position: absolute;
         left: 50px;
@@ -1006,7 +1073,7 @@ margin-top: 20px;
         margin-bottom: -1rem;
     }
 
-     .section-div-paragrapgh{
+    .section-div-paragrapgh{
     position: absolute;
     inset: 200px 64px 64px 106px;
 }
@@ -1134,11 +1201,11 @@ footer{
         padding-inline: unset;
     }
 
-      .top-section-team  , .bottom-section-team{
+    .top-section-team  , .bottom-section-team{
         flex-direction: column;
-      }
+    }
 
-      .left-section-team , .right-section-team ,
+    .left-section-team , .right-section-team ,
 .left-bottom-team , .right-bottom-team{
     flex-direction: column;
     width: unset;
@@ -1199,7 +1266,17 @@ footer{
     .media_marg{
         margin-top: 120px;
     }
-
-
-
+}
+.marg{
+    margin-top: 140px;
+}
+.the_flex{
+    display: flex;
+}
+.bord1_3{
+    border: 1px solid rgba(128, 128, 128, 0.474);
+    width: calc(100%/ 3);
+}
+.oranged{
+    color: #e96b56;
 }
