--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1130,11 +1130,14 @@ footer{
     .card{
         display: flex;
         flex-direction: column;
+
     }
     .cards{
         display: flex;
         flex-direction: column;
         padding: unset;
+       padding-top: 50px;
+       padding-bottom: 50px;
     }
 
     
@@ -1167,13 +1170,14 @@ footer{
 
     .map-section {
         flex-direction: column;
-        height: 189vh;
+        height: 250vh;
     }
 
     .top-map-section{
         flex-direction: column;
         padding-inline: unset;
         row-gap: 35px;
+        
     }
 
     .location-section , .phone-section , .mail-section{
@@ -1241,6 +1245,7 @@ footer{
     .section1{
         display: flex;
         flex-direction: column;
+        
     }
     .leftdiv{order:1;}
     .section2{
